添加架构所需的（空）文件夹

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /api/data/userCloud/*
+!/api/data/userCloud/.gitkeep
 /api/data/userHeads/*
+!/api/data/userHeads/.gitkeep
 /daemon/backend/node_modules
