--- a/daemon/backend/package.json
+++ b/daemon/backend/package.json
@@ -15,11 +15,11 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "fs-extra": "^11.3.0",
+    "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "lru-cache": "^11.1.0",
     "multer": "^1.4.5-lts.2",
-    "path-to-regexp": "^3.3.0",
-    "redis": "^4.7.0"
+    "path-to-regexp": "^3.3.0"
   },
   "devDependencies": {
     "@express-rate-limit/tsconfig": "^1.0.2"
