--- a/daemon/backend/package.json
+++ b/daemon/backend/package.json
@@ -18,6 +18,7 @@
     "ioredis": "^5.6.1",
     "lodash": "^4.17.21",
     "lru-cache": "^11.1.0",
+    "mariadb": "^3.4.2",
     "multer": "^1.4.5-lts.2",
     "path-to-regexp": "^3.3.0"
   },
